name:                haskyapi
version:             0.0.0.1
synopsis:            HTTP server
description:         HTTP server
homepage:            https://github.com/okue/Haskyapi#readme
license:             MIT
license-file:        LICENSE
author:              okue
maintainer:          example@example.com
copyright:           2017 okue
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Haskyapi
                       Web.Haskyapi.Tool
                       Web.Haskyapi.Header
                       Web.Haskyapi.Console.Cli
  build-depends:       base >= 4.7 && < 5
                     , split
                     , bytestring
                     , utf8-string
                     , text
                     , markdown
                     , blaze-html
                     , mtl
                     , network
                     , time
  default-language:    Haskell2010

executable haskyapi
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Config.Config
                       Config.Parser
                       Api.Hapi
                       Api.Checkout
                       Model
                       ModelDef
  build-depends:       base
                     , haskyapi
                     , mtl
                     , directory
                     , http-conduit
                     , split
                     , tagsoup
                     , aeson
                     , bytestring
                     , utf8-string
                     , text
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , parsec
  default-language:    Haskell2010

test-suite haskyapi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , app
  main-is:             Spec.hs
  other-modules:       Api.Checkout
                       Config.Config
                       Config.Parser
                       Model
                       ModelDef
  build-depends:       base
                     , haskyapi
                     , text
                     , mtl
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , aeson
                     , bytestring
                     , http-conduit
                     , parsec
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/okue/Haskyapi
